--- a/css/style.less
+++ b/css/style.less
@@ -275,7 +275,7 @@ img {
 	border-radius: 10px;
 }
 #explain { 
-	background: #8F3434 url("http://rayhyde.nl/playground/img/playground.png") no-repeat 98% bottom / 150px auto;
+	background: #8F3434 url("../img/playground.png") no-repeat 98% bottom / 150px auto;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	-ms-border-radius: 10px;
